# Python-Push-Notification-Challenge

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  up-dev.ps1  up-prod.ps1
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: bootstrap.py  main.py  settings.py
backend/app/adapters/channels/: provider_http.py
backend/app/adapters/graphing/: matplotlib_renderer.py
backend/app/adapters/mailer/: smtp.py
backend/app/adapters/persistence/: async_repo.py  models.py  (+1 more)
backend/app/api/: deps.py  errors.py  schemas.py
backend/app/application/: accounts.py  confirmation.py  contacts.py  delivery.py  liveness.py  readiness_aggregate.py  reporting.py  resilience.py  sending.py  smoke.py  stats_config.py  templates.py
backend/app/cli/: smoke.py
backend/app/domain/: accounts.py  channels.py  contacts.py  dispatch.py  errors.py  health.py  stats.py  templates.py
backend/app/infra/: telemetry.py
backend/app/ports/: channels.py  clock.py  graph.py  mailer.py  probes.py  repositories.py  security.py
backend/app/provider_sim/: main.py
backend/app/tasks/: celery_app.py  deps.py  liveness.py  reporting.py  sending.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_liveness_completion.py  0002_notification_domain.py  0003_admin_and_stats.py
backend/scripts/: seed.py
backend/tests/: conftest.py  fakes.py  helpers.py
backend/tests/factories/: __init__.py
backend/tests/fixtures/: permit-deprecated.conf
backend/tests/integration/: test_admin_frequency.py  test_admin_no_cross_user.py  test_admin_seed_migration.py  test_auth_flow.py  test_confirmation.py  test_contacts.py  test_cors.py  test_health_aggregate.py  test_livez_readyz.py  test_report_cycle.py  test_report_resilience.py  test_resilience.py  test_seed.py  test_sending.py  test_smoke_roundtrip.py  test_telemetry.py  test_templates.py  test_validation_fail.py
backend/tests/unit/: test_channel_registry.py  test_graph_renderer.py  test_hour_histogram.py  test_lifecycle.py  test_readiness_aggregate.py  test_resilience_unit.py  test_settings_validators.py  test_stats_config.py  test_template_validation.py  test_token_and_hash.py
(+152 files in other folders)
