[project]
name = "notification-service"
version = "0.1.0"
description = "Notification service — system liveness walking skeleton"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "alembic>=1.14",
    "celery>=5.4",
    "structlog>=24.4",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "sentry-sdk>=2.19",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.20",
    "email-validator>=2.2",
    "tenacity>=9.0",
    "pybreaker>=1.2",
    "aiosmtplib>=3.0",
    "httpx>=0.28",
]

[project.scripts]
smoke-check = "app.cli.smoke:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,rabbitmq]>=4.9",
    "respx>=0.22",
    "coverage[toml]>=7.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "testcontainers.*", "pybreaker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Celery's task / signal decorators are untyped; scope-disable just that check here.
module = ["app.tasks.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Tests stay checked but are not held to full strict annotation requirements.
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker (Testcontainers Postgres + RabbitMQ)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
